# pigeon

./: LICENSE  README.md  pigeon.py  pigeon_cli.py  pyproject.toml
paper/: pigeon-paper.md  pigeon.aux  pigeon.out  pigeon.tex
posts/: blog.html  reddit.md
