[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pigeon-coord"
version = "0.1.0"
description = "Multi-phase agentic software coordination using files instead of code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "RockTalk Holdings"}]
keywords = ["agents", "orchestration", "coordination", "filesystem", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
pigeon = "pigeon_cli:main"

[project.urls]
Homepage = "https://github.com/rocktalk/pigeon"
